src/app.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

html {
	font-family: 'Barlow', serif;
	font-synthesis: none;
}

#hs-banner-parent {
	--hs-banner-translate-y: -4rem !important;
	--hs-banner-inset: auto !important;
	--hs-banner-width: 32rem !important;
}

#hs-eu-cookie-confirmation {
	font-family: 'Barlow', serif !important;
	inset: none !important;
	@apply !bottom-8 !right-8 !border-emerald-50 !text-lg !shadow-none;
}

#hs-eu-confirmation-button {
	@apply !rounded-full !bg-emerald-950 !font-medium !text-emerald-50;
}

#hs_show_banner_button {
	@apply fixed bottom-8 right-8 z-10 !rounded-full !bg-emerald-950 !text-emerald-50;
}

@media not all and (min-width: 640px) {
	#hs_show_banner_button {
		@apply h-12 w-12 !text-transparent;
	}
	#hs_show_banner_button::before {
		content: '🍪';
		@apply absolute left-[10px] top-[6px] text-2xl text-white;
	}
}

:not(p) {
	@apply max-sm:text-[90%];
}

